tg-7000 [FE] Modifica lógica para que se pueda realizar un inicio de internación en otra institución si el paciente tiene el alta física.

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/profile/profile.component.html
@@ -7,7 +7,7 @@
 	</ng-template>
 
 	<div *appHasRole="['ADMINISTRATIVO']">
-		<button *ngIf="!internmentEpisode?.inProgress" mat-raised-button color="primary" (click)="goNewInternment()">
+		<button *ngIf="showButtonInitiateInternment" mat-raised-button color="primary" (click)="goNewInternment()">
 			<span class="uppercase"> {{ 'pacientes.profile.INITIATE_INTERNMENT' | translate }} </span>
 		</button>
 	</div>
