tg-7106 [Indicaciones] Mostrar nombre autopercibido en cada medicacion

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/item-prescripciones/item-prescripciones.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/item-prescripciones/item-prescripciones.component.html
@@ -28,7 +28,7 @@
 
 <div fxLayout="column" fxLayout.gt-sm="row" fxLayoutAlign="space-between start">
     <span mat-line class="mat-body capitalize-first-letter element-light-color">
-        {{prescriptionItemData.doctor.firstName }} {{prescriptionItemData.doctor.lastName }}
+        {{getFullName(prescriptionItemData.doctor.firstName, prescriptionItemData.doctor.nameSelfDetermination)}} {{prescriptionItemData.doctor.lastName }}
     </span>
     <span mat-line class="mat-body capitalize-first-letter element-light-color" *ngIf="prescriptionItemData.totalDays == 0"
         [translate]="'ambulatoria.paciente.ordenes_prescripciones.DESDE_HOY'">
