--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/medical-coverage/medical-coverage.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/dialogs/medical-coverage/medical-coverage.component.scss
@@ -5,7 +5,7 @@
 }
 
 .mat-card{
-	max-width: 600px;
+	max-width: 800px;
 }
 
 .form{
@@ -32,4 +32,8 @@
 
 .mat-form-field{
 	margin-top: 5px;
+}
+
+.coverage-summary-info {
+	width: 40vw;
 }
