--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-pharmaco-card/internment-pharmaco-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/indicacion/components/internment-pharmaco-card/internment-pharmaco-card.component.html
@@ -1,3 +1,3 @@
 <app-content width="full">
-	<app-indication [header]="PHARMACO" [contents]="[]" [noInformation]="'indicacion.internment-card.sections.no-data.PHARMACO'"></app-indication>
+	<app-indication [header]="PHARMACO" [contents]="indicationContent" [noInformation]="'indicacion.internment-card.sections.no-data.PHARMACO'"></app-indication>
 </app-content>
