--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -29,15 +29,13 @@
 
 				<ng-container concept-form>
 					<ng-container *ngIf="!motivoNuevaConsultaService.getSnomedConcept() else mainMotivoConsulta">
-						<app-concepts-search
-							*ngIf="!searchConceptsLocallyFFIsOn else motivoTypeaheadSearch"
+						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else motivoTypeaheadSearch"
 							[label]="'ambulatoria.paciente.nueva-consulta.motivo.MOTIVO'"
 							(search)="motivoNuevaConsultaService.openSearchDialog($event)">
 						</app-concepts-search>
 
 						<ng-template #motivoTypeaheadSearch>
-							<app-concept-typeahead-search
-								[ecl]="motivoNuevaConsultaService.getECL()"
+							<app-concept-typeahead-search [ecl]="motivoNuevaConsultaService.getECL()"
 								[placeholder]="'ambulatoria.paciente.nueva-consulta.motivo.SEARCH_PLACEHOLDER'"
 								(conceptSelected)="motivoNuevaConsultaService.setConcept($event)">
 							</app-concept-typeahead-search>
@@ -80,15 +78,13 @@
 				sectionImportance="ambulatoria.paciente.nueva-consulta.RECOMENDADO">
 				<div concept-form *ngIf="!this.readOnlyProblema else problemaForm">
 					<ng-container *ngIf="!ambulatoryConsultationProblemsService.getSnomedConcept() else problemaForm">
-						<app-concepts-search
-							*ngIf="!searchConceptsLocallyFFIsOn else problemTypeaheadSearch"
+						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else problemTypeaheadSearch"
 							[label]="'ambulatoria.paciente.nueva-consulta.problemas.CONCEPT_LABEL'"
 							(search)="ambulatoryConsultationProblemsService.openSearchDialog($event)">
 						</app-concepts-search>
 
 						<ng-template #problemTypeaheadSearch>
-							<app-concept-typeahead-search
-								[ecl]="ambulatoryConsultationProblemsService.getECL()"
+							<app-concept-typeahead-search [ecl]="ambulatoryConsultationProblemsService.getECL()"
 								[placeholder]="'ambulatoria.paciente.nueva-consulta.problemas.SEARCH_PLACEHOLDER'"
 								(conceptSelected)="ambulatoryConsultationProblemsService.setConcept($event)">
 							</app-concept-typeahead-search>
@@ -201,7 +197,8 @@
 			<app-new-document-section sectionTitle="ambulatoria.paciente.nueva-consulta.antecedentes-familiares.TITLE">
 				<ng-container concept-form>
 
-					<ng-container *ngIf="!antecedentesFamiliaresNuevaConsultaService.getSnomedConcept() else antecedentesPersonalesForm">
+					<ng-container
+						*ngIf="!antecedentesFamiliaresNuevaConsultaService.getSnomedConcept() else antecedentesPersonalesForm">
 						<app-concepts-search
 							*ngIf="!searchConceptsLocallyFFIsOn else antecedentesFamiliaresTypeaheadSearch"
 							[label]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.ANTECEDENTES_FAMILIARES'"
@@ -209,8 +206,7 @@
 						</app-concepts-search>
 
 						<ng-template #antecedentesFamiliaresTypeaheadSearch>
-							<app-concept-typeahead-search
-								[ecl]="antecedentesFamiliaresNuevaConsultaService.getECL()"
+							<app-concept-typeahead-search [ecl]="antecedentesFamiliaresNuevaConsultaService.getECL()"
 								[placeholder]="'ambulatoria.paciente.nueva-consulta.antecedentes-familiares.SEARCH_PLACEHOLDER'"
 								(conceptSelected)="antecedentesFamiliaresNuevaConsultaService.setConcept($event)">
 							</app-concept-typeahead-search>
@@ -269,15 +265,13 @@
 				<div concept-form>
 
 					<ng-container *ngIf="!medicacionesNuevaConsultaService.getSnomedConcept() else medicationForm">
-						<app-concepts-search
-							*ngIf="!searchConceptsLocallyFFIsOn else medicationTypeaheadSearch"
+						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else medicationTypeaheadSearch"
 							[label]="'ambulatoria.paciente.nueva-consulta.medicaciones.CONCEPT_LABEL'"
 							(search)="medicacionesNuevaConsultaService.openSearchDialog($event)">
 						</app-concepts-search>
 
 						<ng-template #medicationTypeaheadSearch>
-							<app-concept-typeahead-search
-								[ecl]="medicacionesNuevaConsultaService.getECL()"
+							<app-concept-typeahead-search [ecl]="medicacionesNuevaConsultaService.getECL()"
 								[placeholder]="'ambulatoria.paciente.nueva-consulta.medicaciones.SEARCH_PLACEHOLDER'"
 								(conceptSelected)="medicacionesNuevaConsultaService.setConcept($event)">
 							</app-concept-typeahead-search>
@@ -341,15 +335,13 @@
 				<ng-container concept-form>
 
 					<ng-container *ngIf="!procedimientoNuevaConsultaService.getSnomedConcept() else procedimientoForm">
-						<app-concepts-search
-							*ngIf="!searchConceptsLocallyFFIsOn else procedimientoTypeaheadSearch"
+						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else procedimientoTypeaheadSearch"
 							[label]="'ambulatoria.paciente.nueva-consulta.procedimientos.PROCEDIMIENTO'"
 							(search)="procedimientoNuevaConsultaService.openSearchDialog($event)">
 						</app-concepts-search>
 
 						<ng-template #procedimientoTypeaheadSearch>
-							<app-concept-typeahead-search
-								[ecl]="procedimientoNuevaConsultaService.getECL()"
+							<app-concept-typeahead-search [ecl]="procedimientoNuevaConsultaService.getECL()"
 								[placeholder]="'ambulatoria.paciente.nueva-consulta.procedimientos.SEARCH_PLACEHOLDER'"
 								(conceptSelected)="procedimientoNuevaConsultaService.setConcept($event)">
 							</app-concept-typeahead-search>
@@ -410,15 +402,13 @@
 				<ng-container concept-form>
 
 					<ng-container *ngIf="!alergiasNuevaConsultaService.getSnomedConcept() else alergiasForm">
-						<app-concepts-search
-							*ngIf="!searchConceptsLocallyFFIsOn else alergiaTypeaheadSearch"
+						<app-concepts-search *ngIf="!searchConceptsLocallyFFIsOn else alergiaTypeaheadSearch"
 							[label]="'ambulatoria.paciente.nueva-consulta.alergias.ALLERGY'"
 							(search)="alergiasNuevaConsultaService.openSearchDialog($event)">
 						</app-concepts-search>
 
 						<ng-template #alergiaTypeaheadSearch>
-							<app-concept-typeahead-search
-								[ecl]="alergiasNuevaConsultaService.getECL()"
+							<app-concept-typeahead-search [ecl]="alergiasNuevaConsultaService.getECL()"
 								[placeholder]="'ambulatoria.paciente.nueva-consulta.alergias.SEARCH_PLACEHOLDER'"
 								(conceptSelected)="alergiasNuevaConsultaService.setConcept($event)">
 							</app-concept-typeahead-search>
