tg-7018 [FE] Unifica y modifica en un solo componente las tablas a mostrar en Internación y Paciente

--- a/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/pacientes/routes/home/home.component.html
@@ -14,7 +14,7 @@
 	<section *appHasRole="['ADMINISTRATIVO']">
 		<h2 class="page-title" [translate]="'pacientes.home.TITLE_SEARCH'"></h2>
 		<div fxLayout="row">
-			<app-pacientes-table fxFlex="100%"></app-pacientes-table>
+			<app-internment-patient-table fxFlex="100%" [redirect]="redirect"></app-internment-patient-table>
 		</div>
 	</section>
 </app-content>
