--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/home/internaciones-home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/home/internaciones-home.component.html
@@ -1,6 +1,6 @@
 <app-content width="full">
 	<section>
 		<h2 class="page-title" [translate]="'internaciones.internados-table.TITLE'"></h2>
-		<app-internaciones-table></app-internaciones-table>
+		<app-internment-patient-table [redirect]="redirect"></app-internment-patient-table>
 	</section>
 </app-content>
