--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/components/documents-summary/documents-summary.component.html
@@ -71,13 +71,13 @@
 		<div class="documents" id="documents" fxLayout="row">
 			<mat-selection-list color="accent" [multiple]=false id="selection-documents" class="selection-documents">
 				<mat-list-option (click)="setActive(documentSearch)" *ngFor="let documentSearch of documentsToShow">
-					<div fxLayout="row" fxLayoutGap="10px">
+					<div fxLayout="row" fxLayoutGap="5px">
 						<ng-container>
 							<mat-icon *ngIf="documentSearch.document.documentType != 'Epicrisis' && documentSearch.document.documentType != 'Anamnesis'"mat-list-icon fontSet="material-icons-outlined" color="primary">assignment</mat-icon>
 							<mat-icon *ngIf="documentSearch.document.documentType == 'Anamnesis'" mat-list-icon fontSet="material-icons-outlined" color="primary" svgIcon="assignment_return"></mat-icon>
 							<mat-icon *ngIf="documentSearch.document.documentType == 'Epicrisis'" mat-list-icon fontSet="material-icons-outlined" color="primary">assignment_turned_in</mat-icon>
 						</ng-container>
-						<div fxLayout="column" fxLayoutGap="10px">
+						<div fxLayout="column" fxLayoutGap="20px">
 							<span id="document-type" class="color-primary uppercase">
 								<ng-container *ngIf="documentSearch.document.documentType === 'Anamnesis'">
 									Evaluación de ingreso
@@ -99,7 +99,7 @@
 									{{diagnosis}}
 								</span>
 							</div>
-							<div fxLayout="row" fxLayoutGap="20px" fxLayout.xs="column">
+							<div fxLayout="column" fxLayoutGap="10px">
 								<span mat-line>{{documentSearch.document.creator.firstName}} {{documentSearch.document.creator.lastName}}</span>
 								<span mat-line>{{documentSearch.createdOn}}</span>
 							</div>
@@ -108,48 +108,59 @@
 					</div>
 				</mat-list-option>
 			</mat-selection-list>
-			<div *ngIf="viewEvolutionNote()" class="content" fxLayout="column" fxLayoutAlign="space-between">
+			<div *ngIf="viewEvolutionNote()" class="content" fxLayout="row" fxLayoutAlign="space-between">
 				<div>
-					<section *ngIf="activeDocument.document.notes?.currentIllnessNote">
-						<div class="mat-body" [translate]="'internaciones.anamnesis.observations.CURRENT_DISEASE'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.currentIllnessNote}}</div>
-					</section>
+					<ng-container>
+						<div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center" *ngIf="activeDocument.document.notes">
+							<mat-icon mat-list-icon fontSet="material-icons-outlined">assignment</mat-icon>
+							<div class="mat-body-strong" [translate]="'internaciones.documents-summary.CLINICAL_EVALUATION'"></div>
+						</div>
+						<div>
+							<section *ngIf="activeDocument.document.notes?.currentIllnessNote">
+								<div class="mat-body" [translate]="'internaciones.anamnesis.observations.CURRENT_DISEASE'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.currentIllnessNote}}</div>
+							</section>
 
-					<section *ngIf="activeDocument.document.notes?.physicalExamNote">
-						<div class="mat-body"
-							 [translate]="'internaciones.anamnesis.observations.PHYSICAL_EXAMINATION'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.physicalExamNote}}</div>
-					</section>
+							<section *ngIf="activeDocument.document.notes?.physicalExamNote">
+								<div class="mat-body"
+									 [translate]="'internaciones.anamnesis.observations.PHYSICAL_EXAMINATION'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.physicalExamNote}}</div>
+							</section>
 
-					<section *ngIf="activeDocument.document.notes?.studiesSummaryNote">
-						<div class="mat-body" [translate]="'internaciones.anamnesis.observations.STUDIES_PROCEDURES'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.studiesSummaryNote}}</div>
-					</section>
+							<section *ngIf="activeDocument.document.notes?.studiesSummaryNote">
+								<div class="mat-body" [translate]="'internaciones.anamnesis.observations.STUDIES_PROCEDURES'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.studiesSummaryNote}}</div>
+							</section>
 
-					<section *ngIf="activeDocument.document.notes?.evolutionNote">
-						<div class="mat-body" [translate]="'internaciones.anamnesis.observations.PATIENT_PROGRESS'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.evolutionNote}}</div>
-					</section>
+							<section *ngIf="activeDocument.document.notes?.evolutionNote">
+								<div class="mat-body" [translate]="'internaciones.anamnesis.observations.PATIENT_PROGRESS'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.evolutionNote}}</div>
+							</section>
 
-					<section *ngIf="activeDocument.document.notes?.clinicalImpressionNote">
-						<div class="mat-body"
-							 [translate]="'internaciones.anamnesis.observations.CLINICAL_IMPRESSION'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.clinicalImpressionNote}}</div>
-					</section>
+							<section *ngIf="activeDocument.document.notes?.clinicalImpressionNote">
+								<div class="mat-body"
+									 [translate]="'internaciones.anamnesis.observations.CLINICAL_IMPRESSION'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.clinicalImpressionNote}}</div>
+							</section>
 
-					<section *ngIf="activeDocument.document.notes?.indicationsNote">
-						<div class="mat-body" [translate]="'internaciones.epicrisis.observations.INDICATIONS_NOTE'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.indicationsNote}}</div>
-					</section>
+							<section *ngIf="activeDocument.document.notes?.indicationsNote">
+								<div class="mat-body" [translate]="'internaciones.epicrisis.observations.INDICATIONS_NOTE'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.indicationsNote}}</div>
+							</section>
 
-					<section *ngIf="activeDocument.document.notes?.otherNote">
-						<div class="mat-body" [translate]="'internaciones.anamnesis.observations.OTHERS'"></div>
-						<div class="mat-body-strong">{{activeDocument.document.notes.otherNote}}</div>
-					</section>
+							<section *ngIf="activeDocument.document.notes?.otherNote">
+								<div class="mat-body" [translate]="'internaciones.anamnesis.observations.OTHERS'"></div>
+								<div class="mat-body-strong">{{activeDocument.document.notes.otherNote}}</div>
+							</section>
+						</div>
+					</ng-container>
 
 					<section *ngIf="activeDocument.document.procedures.length > 0">
-						<div class="mat-body" [translate]="'internaciones.anamnesis.procedimientos.PROCEDIMIENTOS'"></div>
-						<div *ngFor="let procedure of activeDocument.document.procedures">
+						<div fxLayout="row" fxLayoutGap="10px" fxLayoutAlign="start center">
+							<mat-icon mat-list-icon fontSet="material-icons-outlined">library_add</mat-icon>
+							<div class="mat-body-strong" [translate]="'internaciones.anamnesis.procedimientos.PROCEDIMIENTOS'"></div>
+						</div>
+						<div *ngFor="let procedure of activeDocument.document.procedures" class="subcontent">
 							<div *ngIf="procedure.performedDate" class="mat-body-strong">
 								{{procedure.procedure}} - {{procedure.performedDate | viewDate }}
 							</div>
@@ -167,7 +178,7 @@
 				</div>
 			</div>
 
-			<div *ngIf="(activeDocument && !viewEvolutionNote() )" class="no-notes content mat-body-strong" fxLayout="row" fxLayoutAlign="space-between">
+			<div *ngIf="(activeDocument && !viewEvolutionNote() )" class="no-notes content mat-body-strong" fxLayout="row" fxLayoutAlign="space-between center">
 				<span>{{"internaciones.documents-summary.WITHOUT_OBSERVATIONS" | translate}}</span>
 				<div *ngIf="activeDocument.canDoAction">
 					<button type="button" mat-button color="warn" (click)="delete(activeDocument.document)">
