--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study/study.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study/study.component.html
@@ -3,7 +3,7 @@
 
 	<div id="content" fxLayout="column" fxLayoutGap="20px">
 		<div *ngFor="let study of studies">
-			<app-study-list-element [content]="study"></app-study-list-element>
+			<app-study-list-element [content]="contentBuilder(study)"></app-study-list-element>
 		</div>
 	</div>
 </div>
